CountryModal scrollbar fix
Increase max-width of .countryModal to get better support for longer
button label texts without resulting in horizontal scrollbars.

Also fixed a minor issue with date validation in CountryModal.

--- a/src/app/components/country-picker/countryPicker.less
+++ b/src/app/components/country-picker/countryPicker.less
@@ -10,7 +10,7 @@
 }
 
 .countryModal {
-    max-width: 24rem;
+    max-width: 26rem;
     min-height: 24rem;
     width: 100%;
 
